# generated/kotlin/src/main/kotlin/id/cachet/wallet/generated/models/PackDefinition.kt
@@ -1,0 +1,70 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package id.cachet.wallet.generated.models
+
+import id.cachet.wallet.generated.models.BadgeDefinition
+import id.cachet.wallet.generated.models.PredicateDefinition
+
+import kotlinx.serialization.Serializable
+import kotlinx.serialization.SerialName
+import kotlinx.serialization.Contextual
+
+/**
+ * 
+ *
+ * @param id Pack identifier
+ * @param version Semantic version
+ * @param name Human-readable pack name
+ * @param purpose Purpose of the pack
+ * @param badge 
+ * @param predicates 
+ * @param jurisdictions Applicable jurisdictions (ISO country codes)
+ */
+@Serializable
+
+data class PackDefinition (
+
+    /* Pack identifier */
+    @SerialName(value = "id")
+    val id: kotlin.String,
+
+    /* Semantic version */
+    @SerialName(value = "version")
+    val version: kotlin.String,
+
+    /* Human-readable pack name */
+    @SerialName(value = "name")
+    val name: kotlin.String,
+
+    /* Purpose of the pack */
+    @SerialName(value = "purpose")
+    val purpose: kotlin.String,
+
+    @SerialName(value = "badge")
+    val badge: BadgeDefinition,
+
+    @SerialName(value = "predicates")
+    val predicates: kotlin.collections.List<PredicateDefinition>,
+
+    /* Applicable jurisdictions (ISO country codes) */
+    @SerialName(value = "jurisdictions")
+    val jurisdictions: kotlin.collections.List<kotlin.String>? = null
+
+) {
+
+
+}
+
