# generated/kotlin/src/main/kotlin/id/cachet/wallet/generated/models/VerifyRequestBundle.kt
@@ -1,0 +1,41 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package id.cachet.wallet.generated.models
+
+import id.cachet.wallet.generated.models.VerifiableCredential
+
+import kotlinx.serialization.Serializable
+import kotlinx.serialization.SerialName
+import kotlinx.serialization.Contextual
+
+/**
+ * Credential presentation bundle
+ *
+ * @param credentials Verifiable credentials to evaluate
+ */
+@Serializable
+
+data class VerifyRequestBundle (
+
+    /* Verifiable credentials to evaluate */
+    @SerialName(value = "credentials")
+    val credentials: kotlin.collections.List<VerifiableCredential>
+
+) {
+
+
+}
+
